# innotter

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
api/v1/: urls.py
authentication/: backends.py  middleware.py  serializers.py  urls.py  views.py
innotter/: celery.py  settings.py  urls.py
message_broker/: page_producer.py
page/: admin.py  apps.py  factories.py  logics.py  models.py  producer.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
page/migrations/: 0001_initial.py  0002_initial.py  0003_post_likes.py  0004_alter_page_follow_requests_alter_page_followers_and_more.py  0005_alter_page_tags.py  0006_alter_post_likes.py
tests/pytests/: page_tests.py  user_tests.py
tests/unittests/: user_test.py
user/: admin.py  factories.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_image_s3_path.py
